--- a/app/views/publicGallery.html
+++ b/app/views/publicGallery.html
@@ -1,5 +1,5 @@
 <div class="row personalGalleryRow publicGalleryRow">
-    <div class="col-xs-12">
+    <div class="">
         <div class="uploadedImageArea">
             <div class="titleDiv">
                 <span class="titleSpan">精选素材</span>
