--- a/app/views/addressDetail.html
+++ b/app/views/addressDetail.html
@@ -20,8 +20,8 @@
             <input type="text" class="form-control" ng-model="orderInfo.sCity">
         </div>
     </div>
-    <div class="districtAndCode">
-        <div  style="display:none;">
+    <div class="districtAndCode" style="display:none;">
+        <div style="display:none;">
             <span>区</span>
             <input type="text" class="form-control" ng-model="orderInfo.sDistrict">
         </div>
