--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -23,6 +23,7 @@
                 <img src="{{hostName + '/image/' + oArtifact.previewFileName}}" 
                 
                 hm-dragstart="onSelectedArtiItemDragstart($event, oArtifact)" 
+                hm-drag="onSelectedArtiItemDragged($event, oArtifact)" 
                 hm-dragend="onSelectedArtiItemDragend($event, oArtifact)" 
                 hm-pinch-in="onSelectedArtiItemPinchIn($event, oArtifact)" 
                 hm-pinch-out="onSelectedArtiItemPinchOut($event, oArtifact)" 
