--- a/app/views/createDesign.html
+++ b/app/views/createDesign.html
@@ -47,6 +47,8 @@
             <span class="icon-tbu"></span>
             <span class="icon-tji"></span>
         </div>
-        <img src="img/cloud.png" class="busyViewCloud">
+        <img src="img/cloud.png" class="busyViewCloud1">
+        <img src="img/cloud.png" class="busyViewCloud2">
+        <img src="img/cloud.png" class="busyViewCloud3">
     </div>
 </div>
