--- a/app/views/orderDesign.html
+++ b/app/views/orderDesign.html
@@ -110,7 +110,7 @@
             </div>
         </div>
         <div class="payTotalArea">
-            <span class="needToPay">所需金额：</span>
+            <span class="needToPay">所需金额</span><br>
             <span class="payTotalRMBIcon">￥</span>
             <span class="payTotalCount">{{orderInfo.totalPay}}</span>
             <div class="royalButtonWrapper payButton">
