--- a/app/app.css
+++ b/app/app.css
@@ -85,7 +85,7 @@ body.weavesFunBody {
   color: rgb(215, 180, 104);
 }
 
-.busyView > img {
+.busyView > .busyViewCloud1 {
   width: 40%;
   position: relative;
   top: -60px;
@@ -137,6 +137,114 @@ body.weavesFunBody {
 25%  {left: 20%;}
 50%  {left: 40%;}
 100% {left: 60%;}
+}
+
+.busyView > .busyViewCloud2 {
+  width: 30%;
+  position: relative;
+  top: -200px;
+  animation: busyCloud2 8s;
+  animation-timing-function: linear;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
+  -moz-animation: busyCloud2 8s; /* Firefox */
+  -moz-animation-timing-function: linear;
+  -moz-animation-delay: 1s;
+  -moz-animation-iteration-count: infinite;
+  -webkit-animation: busyCloud2 8s;  /* Safari 和 Chrome */
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-delay: 1s;
+  -webkit-animation-iteration-count: infinite;
+  -o-animation: busyCloud2 8s; /* Opera */
+  -o-animation-timing-function: linear;
+  -o-animation-delay: 1s;
+  -o-animation-iteration-count: infinite;
+}
+
+@keyframes busyCloud2
+{
+0%   {left: 20%;}
+25%  {left: 40%;}
+50%  {left: 60%;}
+100% {left: 80%;}
+}
+
+@-moz-keyframes busyCloud2 /* Firefox */
+{
+0%   {left: 20%;}
+25%  {left: 40%;}
+50%  {left: 60%;}
+100% {left: 80%;}
+}
+
+@-webkit-keyframes busyCloud2 /* Safari 和 Chrome */
+{
+0%   {left: 20%;}
+25%  {left: 40%;}
+50%  {left: 60%;}
+100% {left: 80%;}
+}
+
+@-o-keyframes busyCloud2 /* Opera */
+{
+0%   {left: 20%;}
+25%  {left: 40%;}
+50%  {left: 60%;}
+100% {left: 80%;}
+}
+
+.busyView > .busyViewCloud3 {
+  width: 30%;
+  position: relative;
+  top: 80px;
+  animation: busyCloud3 8s;
+  animation-timing-function: linear;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
+  -moz-animation: busyCloud3 8s; /* Firefox */
+  -moz-animation-timing-function: linear;
+  -moz-animation-delay: 1s;
+  -moz-animation-iteration-count: infinite;
+  -webkit-animation: busyCloud3 8s;  /* Safari 和 Chrome */
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-delay: 1s;
+  -webkit-animation-iteration-count: infinite;
+  -o-animation: busyCloud3 8s; /* Opera */
+  -o-animation-timing-function: linear;
+  -o-animation-delay: 1s;
+  -o-animation-iteration-count: infinite;
+}
+
+@keyframes busyCloud3
+{
+0%   {left: -20%;}
+25%  {left: 0%;}
+50%  {left: 20%;}
+100% {left: 40%;}
+}
+
+@-moz-keyframes busyCloud3 /* Firefox */
+{
+0%   {left: -20%;}
+25%  {left: 0%;}
+50%  {left: 20%;}
+100% {left: 40%;}
+}
+
+@-webkit-keyframes busyCloud3 /* Safari 和 Chrome */
+{
+0%   {left: -20%;}
+25%  {left: 0%;}
+50%  {left: 20%;}
+100% {left: 40%;}
+}
+
+@-o-keyframes busyCloud3 /* Opera */
+{
+0%   {left: -20%;}
+25%  {left: 0%;}
+50%  {left: 20%;}
+100% {left: 40%;}
 }
 
 .createDesignView.row,
@@ -230,7 +338,7 @@ body.weavesFunBody {
 
 .createDetailView .backButton {
   position: relative;
-  left: -7%;
+  left: -4%;
 }
 
 .createDetailView .rightBtn{
@@ -245,9 +353,9 @@ body.weavesFunBody {
 }
 
 .createDetailView .switchColorButton {
-  font-size: 35px;
+  font-size: 40px;
   position: fixed;
-  top: 10px;
+  top: 15px;
   color: black;
 }
 
@@ -262,6 +370,20 @@ body.weavesFunBody {
   width: 24%;
   display: inline-block;
   text-align: center;
+}
+
+.createDetailView .toolRow > div:first-child,
+.createDetailView .toolRow > div:nth-child(5) {
+  width: 15%;
+}
+
+.createDetailView .toolRow > div:nth-child(2),
+.createDetailView .toolRow > div:nth-child(4) {
+  width: 15%;
+}
+
+.createDetailView .toolRow > div:nth-child(3) {
+  width: 34%;
 }
 
 .createDetailView .toolRow > div > span {
@@ -280,14 +402,14 @@ body.weavesFunBody {
 }
 
 .createDetailView .toolRow > div:nth-child(2) > label,
-.createDetailView .toolRow > div:nth-child(3) > label {
+.createDetailView .toolRow > div:nth-child(4) > label {
   border: 1px solid rgb(215, 180, 104);
   border-radius: 20px;
   padding: 4px;
 }
 
 .createDetailView .toolRow > div:nth-child(2) > label.active,
-.createDetailView .toolRow > div:nth-child(3) > label.active {
+.createDetailView .toolRow > div:nth-child(4) > label.active {
   color: white;
   background-color: rgb(215, 180, 104);
 }
@@ -424,13 +546,11 @@ body.weavesFunBody {
   width: 100%;
 }
 
-.createDetailView .previewDesignBtn {
+.createDetailView .royalButtonWrapper.previewDesignBtn {
   text-align: center;
-  position: fixed;
-  bottom: 45px;
-  height: 25px;
-  width: 100%;
-  background-color: rgba(207, 176, 96, 0.5);
+  padding: 0px;
+  position: relative;
+  bottom: 5px;
 }
 
 .createDetailView .previewDesignBtn > span {
@@ -486,6 +606,17 @@ body.weavesFunBody {
   margin-top: 3%;
 }
 
+.createDetailView .saveDetailView .designDescInput > input {
+  background-color: transparent;
+  border-bottom: 2px solid white;
+  border-left: 0px;
+  border-right: 0px;
+  border-top: 0px;
+  border-radius: 0px;
+  box-shadow: none;
+  color: white;
+}
+
 .createDetailView .saveDetailView .designAccess {
   text-align: left;
   margin-left: 15px;
@@ -503,11 +634,13 @@ body.weavesFunBody {
 
 .createDetailView .saveDetailView .saveDesignBtn,
 .createDetailView .saveDetailView .goToOrderBtn {
-  margin-top: 10%;
-  margin-left: 42%;
-  margin-right: 42%;
+  margin-left: 30px;
+  margin-right: 30px;
   padding: 5px 5px;
-  width: auto;
+  width: calc(100% - 60px);
+  width: -webkit-calc(100% - 60px);
+  width: -moz-calc(100% - 60px);
+  width: -o-calc(100% - 60px);
   position: absolute;
   bottom: 20px;
 }
@@ -623,7 +756,7 @@ body.weavesFunBody {
 
 .createDetailView .addressDesignView input {
   background-color: transparent;
-  border-bottom: 2px solid white;
+  border-bottom: 1px solid white;
   border-left: 0px;
   border-right: 0px;
   border-top: 0px;
@@ -635,7 +768,7 @@ body.weavesFunBody {
 .createDetailView .addressDesignView .mobileInfo > span {
   margin-left: 10px;
   color: white;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: bold;
 }
 
@@ -647,6 +780,7 @@ body.weavesFunBody {
   right: 10px;
   height: 24px;
   padding: initial;
+  color: white;
 }
 
 .createDetailView .addressDesignView .provinceAndCity > div,
@@ -674,8 +808,19 @@ body.weavesFunBody {
 .createDetailView .addressDesignView .detailedAddress > div {
   margin-left: 10px;
   color: white;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: bold;
+}
+
+.createDetailView .addressDesignView .detailedAddress > div > textarea {
+  background-color: transparent;
+  border-bottom: 1px solid white;
+  border-left: 0px;
+  border-right: 0px;
+  border-top: 0px;
+  border-radius: 0px;
+  box-shadow: none;
+  color: white;
 }
 
 .createDetailView .addressDesignView .detailedAddress > div > input {
@@ -772,7 +917,7 @@ body.weavesFunBody {
 
 .orderDesignView .defaultOrderQuantityRow .quantityContent span {
   color: white;
-  font-size: 13px;
+  font-size: 12px;
 }
 
 .orderDesignView .defaultOrderQuantityRow .quantityContent .icon-info {
@@ -787,7 +932,7 @@ body.weavesFunBody {
 
 .orderDesignView .defaultOrderQuantityRow .quantityContent .extraSmall {
   font-size: 12px;
-  color: black;
+  color: rgb(118, 118, 118);
   position: relative;
   top: 6px;
 }
@@ -818,7 +963,7 @@ body.weavesFunBody {
 .orderDesignView .defaultOrderQuantityRow .quantityContent .weifu span,
 .orderDesignView .defaultOrderQuantityRow .quantityContent .milin span,
 .orderDesignView .defaultOrderQuantityRow .quantityContent .timeFootage span {
-  color: black;
+  color: rgb(118, 118, 118);
 }
 
 .orderDesignView .defaultOrderQuantityRow .quantityContent .shengzhi span {
@@ -827,7 +972,7 @@ body.weavesFunBody {
 }
 
 .orderDesignView .defaultOrderQuantityRow .quantityContent .milin .qinci {
-  font-size: 16px;
+  font-size: 13px;
   font-weight: bold;
 }
 
@@ -875,7 +1020,7 @@ body.weavesFunBody {
 }
 
 .orderDesignView .defaultOrderQuantityRow .quantityContent > .shengzhi > span {
-  font-size: 17px;
+  font-size: 18px;
   color: white;
 }
 
@@ -961,9 +1106,13 @@ body.weavesFunBody {
   color: white;
 }
 
-.orderDesignView .payOptionRow .payTotalArea .payTotalCount,
+.orderDesignView .payOptionRow .payTotalArea .payTotalCount {
+  font-size: 20px;
+  font-weight: bold;
+}
+
 .orderDesignView .payOptionRow .payTotalArea .needToPay {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
 }
 
@@ -977,36 +1126,38 @@ body.weavesFunBody {
   left: 66%;
 }
 
-.orderDesignView .payOptionRow .royalButtonWrapper.payButton {
+/*.orderDesignView .payOptionRow .royalButtonWrapper.payButton {
   margin-left: 34%;
   margin-right: 34%;
   width: auto;
   padding: 5px 5px 5px 5px;
-}
+}*/
 
-.orderDesignView .payOptionRow .royalButtonWrapper.payButton > .royalButton {
+/*.orderDesignView .payOptionRow .royalButtonWrapper.payButton > .royalButton {
   word-wrap: break-word;
   line-height: 20px;
   white-space: initial;
   padding: initial;
   width: 30px;
-}
+}*/
 
 .orderDesignView .sizeInfo {
   position: fixed;
   z-index: 10000;
   top: 0px;
   left: 0px;
+  height: 100%;
 }
 
 .orderDesignView .sizeInfo .sizeInfoDiv {
   position: relative;
   text-align: center;
+  height: 100%;
 }
 
 .orderDesignView .sizeInfo .sizeInfoDiv img {
   width: 100%;
-  max-height: 100%;
+  height: 100%;
 }
 
 .orderDesignView .sizeInfo .sizeInfoDiv span {
