--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -67,9 +67,9 @@
                 <span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span>
             </span>
         </div>
-        <div class="previewDesignBtn" style="{{htmlItemStyle.designToolArea.styleStr}}" ng-click="onPreviewDesignBtnClicked()">
+        <!--div class="previewDesignBtn" style="{{htmlItemStyle.designToolArea.styleStr}}" ng-click="onPreviewDesignBtnClicked()">
             <span>{{htmlItemStyle.previewBackgroundStyle === '' ? '调整设计' : '预览设计'}}</span>
-        </div>
+        </div-->
         <div class='toolRow' style="{{htmlItemStyle.designToolArea.styleStr}}">
             <div class="backButton">
                 <span class="icon-undo" ng-click="onCreateDesignBackClicked()"></span>
@@ -77,6 +77,11 @@
             <div class="highlightButton">
                 <label class="icon-ideas2" ng-model="sActiveFeature" btn-radio="'highlightSelected'" 
                 ng-click="onOpenPublicGallery()"></label>
+            </div>
+            <div class="royalButtonWrapper previewDesignBtn">
+                <div class="btn btn-warning royalButton" ng-click="onPreviewDesignBtnClicked()">
+                    <span>{{htmlItemStyle.previewBackgroundStyle === '' ? '调整设计' : '预览设计'}}</span>
+                </div>
             </div>
             <div class="cameraButton">
                 <label class="glyphicon glyphicon-camera" ng-model="sActiveFeature" btn-radio="'cameraSelected'" 
