--- a/app/app.css
+++ b/app/app.css
@@ -1528,12 +1528,14 @@ body.weavesFunBody {
   height: 74px;
   margin-top: 10px;
   text-align: center;
+  width: 90%;
+  margin-left: 5px;
 }
 
 .designDetailView .designDetailViewContent .designInfo .royalButtonWrapper {
   width: 48%;
   display: inline-block;
-  padding: 5px 5px;
+  padding: 2px 2px;
 }
 
 .designDetailView .designDetailViewContent .designInfo .royalButtonWrapper > .royalButton {
@@ -1962,6 +1964,11 @@ body.weavesFunBody {
 .payWechatFinalView .orderContent .orderInfoPreview > div {
   margin-top: 10px;
   text-align: center;
+}
+
+.payWechatFinalView .orderContent .orderInfoPreview > div.originTotalPrice,
+.payWechatFinalView .orderContent .orderInfoPreview > div.actualPay {
+  margin-top: 3px;
 }
 
 .payWechatFinalView .orderContent .orderInfoPreview .qrImage > img {
