--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -62,8 +62,8 @@
             <img src="{{largeImgSrc}}">
         </div-->
 
-        <div class="switchColorButton">
-            <span class="icon-changecolor" ng-click="onChangeColorClicked()">
+        <div class="switchColorButton" ng-click="onChangeColorClicked()">
+            <span class="icon-changecolor">
                 <span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span>
             </span>
         </div>
