--- a/app/views/managePublicArtifact.html
+++ b/app/views/managePublicArtifact.html
@@ -22,6 +22,7 @@
                 </ul>
             </div>
             <span class="icon-cancel artifactRemoveButton" ng-click="onDeleteArtifact(oArtifact)"></span>
+            <button type="button" class="btn btn-primary" ng-click="onOrder2TopClicked(oArtifact)">置顶</button>
         </div>
     </div>
 </div>
