--- a/app/views/managePublicDesign.html
+++ b/app/views/managePublicDesign.html
@@ -26,6 +26,7 @@
                     <li><a ng-click="onDesignAccessChange(oDesign, 'review')">review</a></li>
                 </ul>
             </div>
+            <button type="button" class="btn btn-primary" ng-click="onDesign2TopClicked(oDesign)">置顶</button>
         </div>
     </div>
 </div>
