--- a/app/views/myDesigns.html
+++ b/app/views/myDesigns.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="centerContent">
                     <ul rn-carousel rn-carousel-buffered class="image myDesignListCarousel" 
-                    rn-carousel-transition="fadeAndSlide" rn-carousel-index="iDesignCarouselIndex">
+                    rn-carousel-transition="fadeAndSlide" rn-carousel-index="iDesignCarouselIndex" rn-carousel-controls>
                         <span class="noDesignFound" style="{{aMyDesigns.length < 1 ? '' : 'display:none;'}}">竟然目前还没有设计，不如我来设计吧</span>
                         <span class="noDesignFound" ng-if="!aMyDesigns">载入中...</span>
                         <li ng-repeat="oDesign in aMyDesigns">
