--- a/app/views/orderList.html
+++ b/app/views/orderList.html
@@ -5,7 +5,7 @@
     </div>
     
     <div class="myOrdersListContent">
-        <ul rn-carousel class="image myOrdersListCarousel" rn-carousel-transition="fadeAndSlide">
+        <ul rn-carousel class="image myOrdersListCarousel" rn-carousel-transition="fadeAndSlide" rn-carousel-controls>
             <span class="noOrderFound" style="{{aOrderGroups.length < 1 ? '' : 'display:none;'}}">
                 您目前没有订单
             </span>
