--- a/app/views/publicGallery.html
+++ b/app/views/publicGallery.html
@@ -49,7 +49,7 @@
                                 ng-click="onArtifactSelected(oImageGroup[3])">
                             </div>
                         </div>
-                        <div class="myArtifactsGroupBottom">
+                        <!--div class="myArtifactsGroupBottom">
                             <div class="artifactImgDiv">
                                 <img src="{{hostName + '/image/' + oImageGroup[4].previewFileName}}" style="{{!!oImageGroup[4] ? '' : 'visibility:hidden;'}}" 
                                 ng-click="onArtifactSelected(oImageGroup[4])">
@@ -58,7 +58,7 @@
                                 <img src="{{hostName + '/image/' + oImageGroup[5].previewFileName}}" style="{{!!oImageGroup[5] ? '' : 'visibility:hidden;'}}" 
                                 ng-click="onArtifactSelected(oImageGroup[5])">
                             </div>
-                        </div>
+                        </div-->
                     </li>
                 </ul>
                 <div rn-carousel-indicators ng-if="aPublicArtifact.length > 1" slides="aPublicArtifact" 
